# popylar

./: README.md  environment.yml  setup.cfg
dev/: dev_tests.ipynb
popylar/: __init__.py  objective.py  rf.py
popylar/fitters/: __init__.py  fit_utils.py  fitter.py  gauss_2D_iso.py
popylar/irf/: hrf.py  irf.py
popylar/models/: __init__.py  gauss_1D.py  gauss_2D_iso.py  model.py
popylar/signal/: __init__.py  filter.py  hrf.py  irf.py
popylar/stimuli/: __init__.py  stimulus.py
scripts/: demo.ipynb
