[metadata]
name = popylar
version = 0.0.1
description = Package for population receptive field fitting
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prf, encoding model, population receptive field
license = MIT
license_file = COPYING
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/spinoza-centre/spynoza/issues
    Changelog = https://github.com/spinoza-centre/spynoza/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.9
packages = find: 
zip_safe = False
test_suite = tests
setup_requires =
    # setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    setuptools >=46.4.0     # let's you use attr: to extract version from a module
include_package_data = True
packages = find:
scripts =
    scripts/example.py
install_requires =
    numpy >= 1.22
    scipy >= 1.7.3
    pandas >= 1.4.0
    lmfit >= 1.0.3

[sdist]
formats = zip, gztar

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true